<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".KayitOlActivity">

    <RelativeLayout
        android:id="@+id/centerLine2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/centerLine2"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:textSize="37sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine2"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/kayitEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLine2"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/kayitSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/kayitOl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@+id/sifre">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/girisGit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/loginC"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:layout_below="@+id/kayitOl"
        android:layout_marginTop="70dp">

    </TextView>


</RelativeLayout>