<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressBarMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/giris"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_marginTop="10dp">
    </ProgressBar>

    <RelativeLayout
        android:id="@+id/centerLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@+id/centerLine"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="37sp"
            android:textColor="@color/black"
            android:textStyle="bold">
        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerLine"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        
        <EditText
            android:id="@+id/girisEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sifre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerLine"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/girisSifre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/giris"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:layout_below="@+id/sifre">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/loginM"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/kayitOlGit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_design"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/registerL"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"></TextView>

    </RelativeLayout>


</RelativeLayout>